# sql_minus_02

./: CMakeLists.txt  README.md  database_manager.cpp  database_manager.h  database_operations.cpp  database_operations.h  file_utils.cpp  file_utils.h  main.cpp  manager.h  operation.h  sqlparser.cpp  sqlparser.h  structures.h  table_manager.cpp  table_manager.h  table_operations.cpp  table_operations.h  widget.cpp  widget.h  widget.ui
